---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/utxo_main_fn.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Abi(
                AbiDef {
                    name: Identifier {
                        name: "FooAbi",
                        span: 4..10,
                    },
                    parts: [
                        Event(
                            EventDef {
                                name: Identifier {
                                    name: "HelloEvent",
                                    span: 23..33,
                                },
                                params: [],
                                span: 17..37,
                            },
                        ),
                    ],
                },
            ),
            span: 0..40,
        },
        Spanned {
            node: Utxo(
                UtxoDef {
                    name: Identifier {
                        name: "MyUtxo",
                        span: 45..51,
                    },
                    parts: [
                        Function(
                            FunctionDef {
                                export: Some(
                                    UtxoMain,
                                ),
                                name: Identifier {
                                    name: "hello_utxo",
                                    span: 66..76,
                                },
                                params: [],
                                return_type: None,
                                body: Block {
                                    statements: [
                                        Spanned {
                                            node: Expression(
                                                Spanned {
                                                    node: Emit {
                                                        callee: Spanned {
                                                            node: ScopedName(
                                                                [
                                                                    Identifier {
                                                                        name: "HelloEvent",
                                                                        span: 94..104,
                                                                    },
                                                                ],
                                                            ),
                                                            span: 94..104,
                                                        },
                                                        args: [],
                                                    },
                                                    span: 89..106,
                                                },
                                            ),
                                            span: 89..112,
                                        },
                                    ],
                                    tail_expression: None,
                                    span: 79..114,
                                },
                            },
                        ),
                    ],
                },
            ),
            span: 40..116,
        },
    ],
}

==== Inference trace ====
T-Utxo: MyUtxo => 
  T-Fn: hello_utxo => ()
    T-Expr: {hello_utxo: fn() -> ()} ⊢ emit HelloEvent(); ⇒ ()
      T-Call: {hello_utxo: fn() -> ()} ⊢ emit HelloEvent() ⇒ ()
        T-Var: {hello_utxo: fn() -> ()} ⊢ HelloEvent ⇒ event() -> ()

==== Typed AST ====
TypedProgram {
    definitions: [
        Abi(
            TypedAbiDef {
                ty: AbiType {
                    name: Identifier {
                        name: "FooAbi",
                        span: 4..10,
                    },
                    methods: [],
                },
                functions: [
                    TypedAbiMethodDecl {
                        name: Identifier {
                            name: "HelloEvent",
                            span: 23..33,
                        },
                        id: NameId(4),
                        ty: FunctionType {
                            kind: Emit,
                            name_span: 23..33,
                            params: [],
                            result: Unit,
                            callee: Some(
                                Named(
                                    NameId(4),
                                ),
                            ),
                        },
                    },
                ],
            },
        ),
        Utxo(
            TypedUtxoDef {
                name: Identifier {
                    name: "MyUtxo",
                    span: 45..51,
                },
                parts: [
                    Function(
                        TypedFunctionDef {
                            export: Some(
                                UtxoMain,
                            ),
                            name: Identifier {
                                name: "hello_utxo",
                                span: 66..76,
                            },
                            id: NameId(6),
                            ty: FunctionType {
                                kind: Normal,
                                name_span: 66..76,
                                params: [],
                                result: Unit,
                                callee: Some(
                                    Named(
                                        NameId(6),
                                    ),
                                ),
                            },
                            body: TypedBlock {
                                statements: [
                                    Expression(
                                        Spanned {
                                            node: TypedExpr {
                                                ty: Unit,
                                                kind: Call {
                                                    callee: Spanned {
                                                        node: TypedExpr {
                                                            ty: Function(
                                                                FunctionType {
                                                                    kind: Emit,
                                                                    name_span: 23..33,
                                                                    params: [],
                                                                    result: Unit,
                                                                    callee: Some(
                                                                        Named(
                                                                            NameId(4),
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                            kind: ScopedName {
                                                                name: [
                                                                    Identifier {
                                                                        name: "HelloEvent",
                                                                        span: 94..104,
                                                                    },
                                                                ],
                                                                constant: Some(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                        span: 94..104,
                                                    },
                                                    args: [],
                                                },
                                            },
                                            span: 94..104,
                                        },
                                    ),
                                ],
                                tail_expression: None,
                            },
                        },
                    ),
                ],
                ty: UtxoType {
                    name: "MyUtxo",
                    id: NameId(5),
                    public_methods: [],
                    possible_abis: [],
                    always_abis: [],
                },
            },
        ),
    ],
}

==== Core WebAssembly ====
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i64 i64 i64 i64) (result i32)))
  (type (;2;) (func (param i32 i64 i64 i64 i64)))
  (type (;3;) (func))
  (type (;4;) (func (param i32) (result i32)))
  (type (;5;) (func (result i32)))
  (type (;6;) (func (param i32 i32) (result i32)))
  (import "starstream:std/builtin" "[resource-drop]utxo" (func (;0;) (type 0)))
  (import "starstream:std/builtin" "[method]utxo.has-method" (func (;1;) (type 1)))
  (import "starstream:std/builtin" "[resource-drop]token" (func (;2;) (type 0)))
  (import "starstream:std/utxo-context" "[resource-drop]utxo-context" (func (;3;) (type 0)))
  (import "starstream:std/utxo-context" "[method]utxo-context.resume" (func (;4;) (type 0)))
  (import "starstream:std/utxo-context" "[method]utxo-context.implements-method" (func (;5;) (type 2)))
  (import "starstream:events/foo-abi" "hello-event" (func (;6;) (type 3)))
  (import "starstream:self/my-utxo" "[resource-drop]utxo" (func (;7;) (type 0)))
  (import "[export]my-utxo" "[resource-new]utxo" (func (;8;) (type 4)))
  (import "[export]my-utxo" "[resource-drop]utxo" (func (;9;) (type 0)))
  (import "starstream:self/my-utxo" "[static]utxo.hello-utxo" (func (;10;) (type 5)))
  (global (;0;) (mut i32) (i32.const 0))
  (global (;1;) (mut i32) (i32.const 0))
  (export "my-utxo#[static]utxo.hello-utxo" (func 12))
  (export "my-utxo#get-storage" (func 13))
  (export "my-utxo#set-storage" (func 14))
  (func (;11;) (type 3)
    (call 4
      (global.get 1))
    (unreachable)
  )
  (func (;12;) (type 4) (param i32) (result i32)
    (local i32)
    (local.set 1
      (call 8
        (i32.const 0)))
    (global.set 1
      (local.get 0))
    (call 6)
    (call 3
      (local.get 0))
    (local.get 1)
  )
  (func (;13;) (type 4) (param i32) (result i32)
    (global.get 0)
  )
  (func (;14;) (type 6) (param i32 i32) (result i32)
    (global.set 1
      (local.get 0))
    (global.set 0
      (local.get 1))
    (return
      (call 8
        (i32.const 0)))
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (tuple u64 u64 u64 u64))
                  (type (;4;) (func (param "self" 1) (param "hash" 3) (result bool)))
                  (export (;0;) "[method]utxo.has-method" (func (type 4)))
                  (export (;5;) "token" (type (sub resource)))
                  (type (;6;) (borrow 5))
                  (type (;7;) (own 5))
                )
              )
              (import "starstream:std/builtin" (instance (;0;) (type 0)))
              (alias export 0 "utxo" (type (;1;)))
              (import "s-utxo" (type (;2;) (eq 1)))
              (type (;3;) (borrow 2))
              (type (;4;) (own 2))
              (alias export 0 "token" (type (;5;)))
              (import "s-token" (type (;6;) (eq 5)))
              (type (;7;) (borrow 6))
              (type (;8;) (own 6))
              (type (;9;)
                (instance
                  (export (;0;) "utxo-context" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (func (param "self" 1)))
                  (export (;0;) "[method]utxo-context.resume" (func (type 3)))
                  (type (;4;) (tuple u64 u64 u64 u64))
                  (type (;5;) (func (param "self" 1) (param "hash" 4)))
                  (export (;1;) "[method]utxo-context.implements-method" (func (type 5)))
                )
              )
              (import "starstream:std/utxo-context" (instance (;1;) (type 9)))
              (alias export 1 "utxo-context" (type (;10;)))
              (import "s-utxo-context" (type (;11;) (eq 10)))
              (type (;12;) (borrow 11))
              (type (;13;) (own 11))
              (type (;14;)
                (instance
                  (type (;0;) (func))
                  (export (;0;) "hello-event" (func (type 0)))
                )
              )
              (import "starstream:events/foo-abi" (instance (;2;) (type 14)))
              (type (;15;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (func (result 2)))
                  (export (;0;) "[static]utxo.hello-utxo" (func (type 3)))
                )
              )
              (import "starstream:self/my-utxo" (instance (;3;) (type 15)))
              (alias export 3 "utxo" (type (;16;)))
              (import "u-my-utxo" (type (;17;) (eq 16)))
              (type (;18;) (borrow 17))
              (type (;19;) (own 17))
              (type (;20;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (alias outer 1 10 (type (;3;)))
                  (export (;4;) "s-utxo-context" (type (eq 3)))
                  (type (;5;) (borrow 4))
                  (type (;6;) (own 4))
                  (type (;7;) (func (param "utxo-context" 6) (result 2)))
                  (export (;0;) "[static]utxo.hello-utxo" (func (type 7)))
                  (type (;8;) (record (field "yield" s32)))
                  (export (;9;) "storage" (type (eq 8)))
                  (type (;10;) (func (param "self" 1) (result 9)))
                  (export (;1;) "get-storage" (func (type 10)))
                  (type (;11;) (func (param "ctx" 6) (param "storage" 9) (result 2)))
                  (export (;2;) "set-storage" (func (type 11)))
                )
              )
              (export (;4;) "my-utxo" (instance (type 20)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)

==== WIT ====
package root:component;

world root {
  import starstream:std/builtin;
  import starstream:std/utxo-context;
  import starstream:events/foo-abi;
  import starstream:self/my-utxo;
  use starstream:std/builtin.{utxo as s-utxo, token as s-token};
  use starstream:std/utxo-context.{utxo-context as s-utxo-context};
  use starstream:self/my-utxo.{utxo as u-my-utxo};

  export my-utxo: interface {
    use starstream:std/utxo-context.{utxo-context as s-utxo-context};

    resource utxo {
      hello-utxo: static func(utxo-context: s-utxo-context) -> utxo;
    }

    record storage {
      yield: s32,
    }

    get-storage: func(self: borrow<utxo>) -> storage;

    set-storage: func(ctx: s-utxo-context, storage: storage) -> utxo;
  }
}
package starstream:std {
  interface builtin {
    resource utxo {
      has-method: func(hash: tuple<u64, u64, u64, u64>) -> bool;
    }

    resource token;
  }
  interface utxo-context {
    resource utxo-context {
      resume: func();
      implements-method: func(hash: tuple<u64, u64, u64, u64>);
    }
  }
}


package starstream:events {
  interface foo-abi {
    hello-event: func();
  }
}


package starstream:self {
  interface my-utxo {
    resource utxo {
      hello-utxo: static func() -> utxo;
    }
  }
}
